--- a/css/login.css
+++ b/css/login.css
@@ -9,7 +9,7 @@ body
     font-weight: 600;
 }
 
-input[type="email"], input[type="password"]
+input[type="email"], input[type="password"],input[type="tel"],input[type='text']
 {
     outline: none;
     padding: 10px;
@@ -25,7 +25,7 @@ input[type="submit"]
 {
     padding: 10px;
     color: #fff;
-    background: #0098cb;
+    background: #fdb927;
     width: 320px;
     margin: 20px auto;
     margin-top: 0px;
@@ -36,7 +36,7 @@ input[type="submit"]
 
 input[type="submit"]:hover
 {
-  background: #00b8cb;  
+  background: #fdb927;  
     
 }
 
