--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,70 @@ body
     font-weight: 600;
 }
 
+#roundButton {
+    background-color: #fdb927;
+    margin-bottom: 20px;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    border: 10px solid #0065A6;
+    outline: none;
+    transition: transform .3s cubic-bezier(0, .52, 0, 1);
+    position: fixed;
+    top: 15;
+    right: 15;
+  }
+  
+  #roundButton:hover {
+    
+    cursor: pointer;
+    
+    transform: scale(1.2, 1.2);
+  }
+  
+  #roundButton:active {
+    border-color: #003557;
+    background-color: #FFF;
+  }
+
+    #flyoutMenu 
+    {
+        width: 100vw;
+        height: 100vh;
+        background-color: #fdb927;
+        position: fixed;
+        top: 0;
+        left: 0;
+        transform: translate3d(-100vw, 0, 0);
+        transition: transform .3s cubic-bezier(0, .52, 0, 1);
+        overflow: hidden;
+        z-index: 1000;
+    }
+
+    #flyoutMenu.show
+    {
+        transform: translate3d(0vw, 0, 0);
+    }
+
+    #flyoutMenu h2
+    {
+        font-size: 6em;
+        text-align: center;
+        color:white;
+    }
+
+    #flyoutMenu h2 a 
+    {
+        color: #333;
+        margin-left: 15px;
+        text-decoration: none;
+      }
+
+      #flyoutMenu h2 a:hover
+        {
+        color: #fff;
+      }
+
 #showcase
 {
    background-color: #004684;
